--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pasty": "./index.js"
   },
   "dependencies": {
-    "copy-paste": "^1.3.0"
+    "copy-paste": "^1.3.0",
+    "chalk": "~1.1.3"
   }
 }
