--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "pasty": "./index.js"
   },
   "dependencies": {
-    "copy-paste": "^1.3.0",
-    "chalk": "~1.1.3"
+    "chalk": "~1.1.3",
+    "co": "^4.6.0",
+    "co-prompt": "^1.0.0",
+    "copy-paste": "^1.3.0"
   }
 }
