--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "dependencies": {
     "chalk": "~1.1.3",
-    "co": "^4.6.0",
-    "co-prompt": "^1.0.0",
-    "copy-paste": "^1.3.0"
+    "copy-paste": "^1.3.0",
+    "readline-sync": "^1.4.7"
   }
 }
