--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chalk": "~1.1.3",
     "copy-paste": "^1.3.0",
-    "readline-sync": "^1.4.7"
+    "readline-sync": "^1.4.7",
+    "uuid": "^3.0.1"
   }
 }
