--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "pasty": "./index.js"
   },
   "dependencies": {
+    "atob": "^2.0.3",
+    "btoa": "^1.1.2",
     "chalk": "~1.1.3",
     "clipboardy": "^1.1.0",
     "readline-sync": "^1.4.7",
