--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "pasty-clipboard-editor",
-  "version": "1.0.6",
-  "description": "Edits the text on your clipboard",
-  "main": "index.js",
-  "scripts": {
-    "test": "pasty pasty"
-  },
-  "keywords": [
-    "pasty",
-    "clipboard",
-    "pastebin",
-    "paste",
-    "cli"
+	"name": "pasty-clipboard-editor",
+	"version": "1.0.8",
+	"description": "Edits the text on your clipboard",
+	"main": "index.js",
+	"scripts": {
+		"test": "pasty pasty"
+	},
+	"keywords": [
+		"pasty",
+		"clipboard",
+		"pastebin",
+		"paste",
+		"cli"
   ],
+  "repository":{
+	  "type":"git",
+	  "url":"https://github.com/Mnrikard/pasty"
+  },
   "author": "Matthew Rikard",
   "license": "MIT",
   "bin": {
-    "pasty": "./index.js"
+	  "pasty": "./index.js"
   },
   "dependencies": {
-    "atob": "^2.0.3",
-    "btoa": "^1.1.2",
-    "chalk": "~1.1.3",
-    "clipboardy": "^1.1.0",
-    "readline-sync": "^1.4.7",
-    "uuid": "^3.0.1"
+	  "atob": "^2.0.3",
+	  "btoa": "^1.1.2",
+	  "chalk": "~1.1.3",
+	  "clipboardy": "^1.1.0",
+	  "readline-sync": "^1.4.7",
+	  "uuid": "^3.0.1"
   }
 }
