--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-	"name": "pasty-clipboard-editor",
-	"version": "1.1.3",
-	"description": "Edits the text on your clipboard",
-	"main": "index.js",
-	"scripts": {
-		"test": "node ./test.js"
-	},
-	"keywords": [
-		"pasty",
-		"clipboard",
-		"pastebin",
-		"paste",
-		"cli"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Mnrikard/pasty"
-	},
-	"author": "Matthew Rikard",
-	"license": "MIT",
-	"bin": {
-		"pasty": "./index.js"
-	},
-	"dependencies": {
-		"atob": "^2.0.3",
-		"btoa": "^1.1.2",
-		"chalk": "~1.1.3",
-		"clipboardy": "^1.1.0",
-		"complete": "^0.4.4",
-		"readline-sync": "^1.4.7",
-		"uuid": "^3.0.1"
-	}
+  "name": "pasty-clipboard-editor",
+  "version": "1.1.4",
+  "description": "Edits the text on your clipboard",
+  "main": "index.js",
+  "scripts": {
+    "test": "node ./test.js"
+  },
+  "keywords": [
+    "pasty",
+    "clipboard",
+    "pastebin",
+    "paste",
+    "cli"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mnrikard/pasty"
+  },
+  "author": "Matthew Rikard",
+  "license": "MIT",
+  "bin": {
+    "pasty": "./index.js"
+  },
+  "dependencies": {
+    "atob": "^2.0.3",
+    "btoa": "^1.1.2",
+    "chalk": "~1.1.3",
+    "clipboardy": "^1.1.0",
+    "complete": "^0.4.4",
+    "readline-sync": "^1.4.7",
+    "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "electron-builder": "^20.8.1"
+  }
 }
