--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pasty-clipboard-editor",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Edits the text on your clipboard",
   "main": "index.js",
   "scripts": {
@@ -25,13 +25,14 @@
   "dependencies": {
     "atob": "^2.0.3",
     "btoa": "^1.1.2",
-    "chalk": "~1.1.3",
+    "chalk": "~2.4.2",
     "clipboardy": "^1.1.0",
     "complete": "^0.4.4",
     "readline-sync": "^1.4.7",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "atob": "^2.1.2",
     "electron-builder": "^20.8.1"
   }
 }
