atob properly depended

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pasty-clipboard-editor",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Edits the text on your clipboard",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "pasty": "./index.js"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "btoa": "^1.2.1",
     "chalk": "~2.4.2",
     "clipboardy": "^1.2.3",
@@ -30,8 +31,5 @@
     "readline-sync": "^1.4.9",
     "uuid": "^3.3.2"
   },
-  "devDependencies": {
-    "atob": "^2.1.2",
-    "electron-builder": "^20.40.2"
-  }
+  "devDependencies": {}
 }
